# django_arena

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  constraints-django3.2.txt  manage.py  pyproject.toml  requirements.txt
dev/conf/vscode/: settings.json
src/arena/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
src/arena/apps/core/: apps.py  urls.py  views.py
src/arena/apps/core/templates/: base.html  index.html
src/arena/apps/core/templates/core/: base.html  index.html
tests/: settings.py  test_arena.py  test_placeholder.py
