[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arena"
version = "0.0.1.dev0+dirty"
description = "A place to putz with Django."
authors = [{ name = "User Name", email = "user.name@nowhere.localhost" }]
dependencies = [
  "Django>=3.2,<4",
  "django-stubs>=1.14,<5"  # Django 3 support droped in 5.0
]
requires-python = ">= 3.10,<3.13"                                               # EOL 3.10 31 Oct 2026; django 3 breaks in 3.13+

[dependency-groups]
dev = [
  "black",
  "flake8",
  "flake8-bugbear",
  "isort",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-django>=4,<4.9",  # 4.9 drops Django 3 support
]

[project.scripts]
arena = "arena.__main__:main"

[tool.black]
line-length = 120

[tool.django-stubs]
django_settings_module = "arena.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "arena.settings"
FAIL_INVALID_TEMPLATE_VARS = true
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "default::DeprecationWarning",  # show but do not fail for deprecated bits used by deps
]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
